--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
   - 5.3
   # aliased to a recent 5.4.x version
   - 5.4
+  # aliased to a recent 5.5.x version
+  - 5.5
 
 script: phpunit Tests/shorten.php
 
